--- a/index.html
+++ b/index.html
@@ -718,7 +718,10 @@
         <!-- Designed by Expert -->
         <section class="section-7">
             <div class="section-7-left">
-                <img src="./Image/1605873617_taxsaving.svg" alt="">
+                <video >
+                    <source src="./Image/video.mp4">
+                </video>
+                <!-- <img src="./Image/1605873617_taxsaving.svg" alt=""> -->
             </div>
             <div class="section-7-right">
                 <div class="section-7-right-container">
