--- a/index.html
+++ b/index.html
@@ -802,6 +802,9 @@
         <section class="section-9">
             <div class="section-9-heading">
                 <h2>Trusted by experts and businesses</h2>
+                <div class="section-9-heading-arrows-1"> &#8594;</div>
+                <div class="section-9-heading-arrows-2"> &#8592;</div>
+                <!-- <div class="section-2-arrows" style="width: 50px; height: 60px; float: right; right: 0;"> &#8594;</p></div> -->
             </div>
             <div class="section-9-contanier">
                 <div class="section-9-container-box">
@@ -838,6 +841,8 @@
         <section class="section-10">
             <div class="section-10-heading">
                 <h2>Press and Awards</h2>
+                <div class="section-9-heading-arrows-1"> &#8594;</div>
+                <div class="section-9-heading-arrows-2"> &#8592;</div>
             </div>
             <div class="section-10-container">
 
